@@ -376,6 +376,7 @@ AC_CHECK_HEADERS(machine/types.h)
 AC_CHECK_HEADERS(mntent.h sys/mnttab.h sys/systemcfg.h)
 AC_CHECK_HEADERS(sys/mount.h sys/mntctl.h sys/vmount.h)
 AC_CHECK_HEADERS(bzlib.h libio.h zlib.h)
+AC_CHECK_HEADERS(mcheck.h)
 
 dnl whether or not we should try build rpmconvert, which is used to convert
 dnl rpm databases from rpm 1.x to rpm 2.x or later.  It requires the gdbm
@@ -591,6 +592,8 @@ dnl XXX AC_FUNC_STRFTIME
 dnl XXX AC_FUNC_UTIME_NULL
 dnl XXX AC_FUNC_VFORK
 dnl XXX AC_CHECK_FUNCS(gethostname mkdir mkfifo rmdir select uname)
+
+AC_CHECK_FUNCS(mtrace)
 
 AC_REPLACE_FUNCS(getcwd getwd glob inet_aton putenv realpath)
 AC_REPLACE_FUNCS(strdup strerror strtol strtoul strspn strstr)
