@@ -47,6 +47,7 @@
 	- Solaris: use getpassphrase rather than getpass if available.
 	- pgp and pgp5 have compatible RSA signature (#4780).
 	- fix: avoid db problems with self-obsoleting packages on install.
+	- glibc2: always enable dynamic mtrace if available.
 
 3.0.1 -> 3.0.2
 	- eliminate armv4 entries from rpmrc (Andrew E. Mileski).
